# cmake-mess

./: CMakeLists.txt  README.md  build.sh
include/test-lib/: test-lib.hpp
src/: CMakeLists.txt  main.cpp  test-lib.cpp  test-lib.hpp
src/test-lib/: test-lib.cpp
tests/: test-lib.cpp
